--- a/src/scss/themes/bootstrap/variables5.scss
+++ b/src/scss/themes/bootstrap/variables5.scss
@@ -702,7 +702,7 @@ $table-dark-striped-bg:      #2c3034;
 $table-dark-striped-color:   #fff;
 $table-dark-active-bg:       #373b3e;
 $table-dark-active-color:    #fff;
-$table-dark-hover-bg:        #323539;
+$table-dark-hover-bg:        $gray-600;
 $table-dark-hover-color:     #fff;
 
 
